# MaineCoon

./: .gitignore  README.md
pysrc/: Main_Python_File.py  logging.py
pysrc/FuzzyLib/: PyFuzzy.py  fuzzy.cpp  fuzzy.h  setup.sh
pysrc/PySensorLib/: MS5607.py  SSD1306.py  UharpLib.py  pyoleddisp.py
pysrc/PySensorLib/uharp/: AprsPacketUtil.cpp  AprsPacketUtil.h  UharpLib.py
scripts/: build_cython_files.bat  eclipse_windows.bat  linux_build.sh
src/: CMakeLists.txt  filestandard.cpp  filestandard.h  fuzzy.cpp  fuzzy.h  fuzzy.py  logging.py  main.cpp
src/hrdint/: CMakeLists_1.txt
src/hrdint/PySensorLib/: CMakeLists.txt  PySensorLib.py  SensorLib.cpp  SensorLib.h  UharpLib.py
src/hrdint/PySensorLib/uharp/: PyTest.py
src/hrdint/oleddisp/: CMakeLists.txt  oleddisp.cpp  oleddisp.h  oleddisp.pyx  oleddispsetup.py  pyoleddisp.cpp  pyoleddisp.h  pyoleddisp.py  pyoleddisp.pyx
src/hrdint/pthread/: pthread.cpp  threads.cpp  threads.h
src/hrdint/slowscan/: CMakeLists.txt  pyslowscan.py  slowscan.cpp  slowscan.h
src/hrdint/tempPress/: CMakeLists.txt  tempPress.cpp  tempPress.h  tempPressWrapper.cpp
src/hrdint/uharp/: AprsPacketUtil.cpp  AprsPacketUtil.h  CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/Adafruit_SSD1306/: SSD1306.py
src/libs/wiringpi/: CMakeLists.txt
utilities/UtilitiesSource/: build.xml
utilities/UtilitiesSource/src/com/uc/cubecats/archiver/: ArchiveManager.java  ProjectArchiver.java
utilities/UtilitiesSource/src/com/uc/cubecats/packager/: DistPackage.java
